--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="cabecalho">
-      <img src="" alt="" />
+      <img src="./img/logo.png" alt="Monitor" />
       <nav>
         <a href="#">Item-1</a>
         <a href="#">Item-2</a>
@@ -20,36 +20,36 @@
 
     <section class="conteudo">
       <div>
-        <img src="" alt="" />
+        <img src="./img/lobo1.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./img/lobo2.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./img/lobo3.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./img/lobo4.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./img/lobo5.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
       <div>
-        <img src="" alt="" />
+        <img src="./img/lobo6.jpg" alt="Lobo" />
         <p>Legenda</p>
       </div>
     </section>
     <footer class="rodape">
       <h2>Fale Conosco</h2>
       <nav>
-        <a href="#">Github</a>
-        <a href="#">Facebook</a>
-        <a href="#">Twitter</a>
+        <a href="#"><img src="./img/social-1.png" alt="Github" /></a>
+        <a href="#"><img src="./img/social-2.png" alt="Facebook" /></a>
+        <a href="#"><img src="./img/social-3.png" alt="Twitter" /></a>
       </nav>
     </footer>
   </body>
