--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
 
-    <h2 calss="tit-sec">Seção de fotos</h2>
+    <h2 class="tit-sec">Seção de fotos</h2>
 
     <section class="conteudo">
       <div>
