--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
         <a href="#"><img src="./img/social-2.png" alt="Facebook" /></a>
         <a href="#"><img src="./img/social-3.png" alt="Twitter" /></a>
       </nav>
+
+      <div>
+        <form action="" method="get" onsubmit="return false">
+          <fieldset>
+            <legend>Contato</legend>
+            <div>
+              <label for="">Email</label>
+              <input type="email" name="txtEmail" id="idEmail" required placeholder="Email">
+            </div>
+            <div>
+              <label for="">Nome</label>
+              <input type="text" name="txtNome" id="idNome" required placeholder="Nome">
+            </div>
+            <div>
+              <input type="submit" value="Enviar">
+            </div>
+            
+          </fieldset>
+        
+        </form>
+      </div>
+
     </footer>
   </body>
 </html>
+
+
