--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
 
-    <h2 calss="tit-sec">Seção de fotos</h2>
+    <h2 class="tit-sec">Seção de fotos</h2>
 
     <section class="conteudo">
       <div>
@@ -52,6 +52,26 @@
         <a href="#"><img src="./img/social-2.png" alt="Facebook" /></a>
         <a href="#"><img src="./img/social-3.png" alt="Twitter" /></a>
       </nav>
+
+      <div>
+        <form action="" method="get" onsubmit="return false">
+            <fieldset>
+                <legend>Contato</legend>
+                <div>
+                    <label for="idEmail">Email</label>
+                    <input type="email" name="txtEmail" id="idEmail" required placeholder="Email">
+                </div>
+                <div>
+                    <label for="idNome">Nome</label>
+                    <input type="text" name="txtNome" id="idNome" required placeholder="Nome">
+                </div>
+                <div>
+                    <input type="submit" value="Enviar">
+                </div>
+            </fieldset>
+        </form>
+    </div>
+
     </footer>
   </body>
 </html>
