--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Layout</title>
     <link rel="stylesheet" href="./css/estilo.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="./js/script.js" defer></script>
    
   </head>
@@ -58,40 +59,33 @@
     <footer class="rodape">
       <h2>Fale Conosco</h2>
 
-      <form action="/apelido" method="post" onsubmit="return true">
+      <form action="index.html" method="get" onsubmit="return false">
         <fieldset>
-          <legend>Contato</legend>
+          <legend>Entrar</legend>
           <div>
             <label for="idEmail">Email</label>
             <input
               type="email"
               name="txtEmail"
               id="idEmail"
-              required
+              pattern="[A-Za-z0-9]"
               placeholder="Email"
             />
           </div>
+         
           <div>
-            <label for="idNome">Nome</label>
-            <input
-              type="text"
-              name="txtNome"
-              id="idNome"
-              required
-              placeholder="Nome"
-            />
-          </div>
           <label for="idSenha">Senha</label>
             <input
               type="password"
               name="txtSenha"
               id="idSenha"
-              required
+              
               placeholder="Senha"
             />
+            <i class="fa fa-eye" aria-hidden="true"></i>
           </div>
           <div>
-            <input type="submit" value="Enviar" />
+            <button type="submit" id="btnSubmit">Entrar</button>
           </div>
         </fieldset>
       </form>
